HUDF-587 fixed word wrap @seanrose83

--- a/FJSHUD/app/styles/tables.less
+++ b/FJSHUD/app/styles/tables.less
@@ -596,6 +596,7 @@
     margin-left: .5em;
     flex: 1;
 	-webkit-flex: 1;
+	overflow: hidden;
   }
   
   .ChatMessageItem {
